<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    tools:context=".InicioSesion">

<androidx.appcompat.widget.LinearLayoutCompat
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="15dp"
android:gravity="center">

<TextView
    android:text="@string/LoginTXT"
    android:textColor="#000"
    android:textStyle="bold"
    android:textSize="18sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<!-- Animacion -->
<com.airbnb.lottie.LottieAnimationView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="10dp"
    android:layout_gravity="center_horizontal"
app:lottie_imageAssetsFolder="assets"
app:lottie_fileName="carga_animacion.json"
app:lottie_loop="true"
app:lottie_autoPlay="true"/>

<!-- Correo electrónico -->
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <EditText
        android:id="@+id/Correo"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</com.google.android.material.textfield.TextInputLayout>

<!-- Contraseña -->
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/Password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/Ingresar"
    android:text="@string/Ingresar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"/>

</androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
